TGA Images with any alpha value smaller than one behaves unexpected #89034

Closed
opened 2021-06-10 14:56:28 +02:00 by Frederik Steinmetz · 12 comments

System Information
Operating system: Win10, 64
Graphics card: GTX 980

Blender Version
Broken: 2.80, 2.93, but I don't think it ever worked.

Short description of error
When importing .tga image file, Blender doesn't output any color information where the alpha channel is 0.
When set to straight, I think the RGB gets multiplied by the alpha value. It's darkening the image a lot, pure black when alpha is 0.
When set to pre-multiplied where the alpha channel is < 1, there are only grayscale values, no color information anymore.

I use tga, because it's easy to separate color from RGB and use the alpha channel as a map in game engines, so it would be great if Blender could treat .tga like for example Unity does. Whether the alpha is transparent, or just another channel is optional.

Exact steps for others to reproduce the error
Import any .tga image with an alpha channel that has at least some areas where the alpha is smaller than 1.Scratches.tga

**System Information** Operating system: Win10, 64 Graphics card: GTX 980 **Blender Version** Broken: 2.80, 2.93, but I don't think it ever worked. **Short description of error** When importing .tga image file, Blender doesn't output any color information where the alpha channel is 0. When set to straight, I think the RGB gets multiplied by the alpha value. It's darkening the image a lot, pure black when alpha is 0. When set to pre-multiplied where the alpha channel is < 1, there are only grayscale values, no color information anymore. I use tga, because it's easy to separate color from RGB and use the alpha channel as a map in game engines, so it would be great if Blender could treat .tga like for example Unity does. Whether the alpha is transparent, or just another channel is optional. **Exact steps for others to reproduce the error** Import any .tga image with an alpha channel that has at least some areas where the alpha is smaller than 1.![Scratches.tga](https://archive.blender.org/developer/F10165679/Scratches.tga)

Added subscriber: @FrederikSteinmetz

Added subscriber: @FrederikSteinmetz
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Member

Isnt this what Channel Packed is for?
(this seems to display/render correctly for me in both eevee and cycles)

#89034.blend
image.png

However, I am also confused why Channel Packed is still displaying like Straight in the Image Editor, will check...
But lets first see if Channel Packed suits your needs.

Isnt this what `Channel Packed` is for? (this seems to display/render correctly for me in both eevee and cycles) [#89034.blend](https://archive.blender.org/developer/F10218052/T89034.blend) ![image.png](https://archive.blender.org/developer/F10218053/image.png) However, I am also confused why Channel Packed is still displaying like Straight in the Image Editor, will check... But lets first see if `Channel Packed` suits your needs.

This issue was referenced by 563fdaaa39

This issue was referenced by 563fdaaa397bbe5e3fdc66cb72db15af16e0fb1a

This issue was referenced by 53cf8e83b3

This issue was referenced by 53cf8e83b37da5cc4de2ef9bd6e4df9e81c976ac
Member

regarding Channel Packed images still displaying with alpha affecting rgb in the Image Editor (and elsewhere, excluding "real" rendering the textures): put up a patch here D11871: Fix channel packed images display in the Image/Node editor

regarding Channel Packed images still displaying with alpha affecting rgb in the Image Editor (and elsewhere, excluding "real" rendering the textures): put up a patch here [D11871: Fix channel packed images display in the Image/Node editor](https://archive.blender.org/developer/D11871)

Added subscriber: @philipp-14

Added subscriber: @philipp-14

Philipp Oeser (lichtwerk) Yes, the channel packed option fixes my issue. No idea how I missed this, sorry.

Philipp Oeser (lichtwerk) Yes, the channel packed option fixes my issue. No idea how I missed this, sorry.
Member

Removed subscriber: @philipp-14

Removed subscriber: @philipp-14
Member

Changed status from 'Needs User Info' to: 'Resolved'

Changed status from 'Needs User Info' to: 'Resolved'
Philipp Oeser self-assigned this 2021-07-12 12:33:45 +02:00
Member

@FrederikSteinmetz : OK, thx getting back, will close then (since D11871 has also landed, so Channel Packed should work correctly in the Image Editor as well)

@FrederikSteinmetz : OK, thx getting back, will close then (since [D11871](https://archive.blender.org/developer/D11871) has also landed, so Channel Packed should work correctly in the Image Editor as well)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#89034
No description provided.